package org.example;

import java.util.List;

public class PuntajeStrategy implements RecomendarStrategy{

    @Override
    public List<Pelicula> sugerirTres(List<Pelicula> peliculas) {
        return List.of();
    }
}
